2001-09-24  Peter Stephenson  <pws@csr.com>

	* Src/builtin.c, Src/exec.c: Unwind function calls before exiting
	shell from exit command to allow EXIT traps to run.

2001-09-21  Andrew Main (Zefram)  <zefram@zsh.org>

	* Doc/Zsh/contrib.yo, Functions/Misc/tetris: Tetris game for ZLE.

2001-09-20  Bart Schaefer  <schaefer@zsh.org>

	* 15847: Src/init.c: Avoid using the word "termcap" in an error
	message when it may in fact have been curses or terminfo that
	failed.

2001-09-19  Peter Stephenson  <pws@csr.com>

	* 15846: aczsh.m4: Fix attempt to restore LDFLAGS from non-existent
	saved value when testing RTLD_GLOBAL.

2001-09-18  Wayne Davison  <wayned@users.sourceforge.net>

	* 15836: Src/builtin.c: Further modify the "fc -l" code to tolerate
	out-of range values.

2001-09-17  Wayne Davison  <wayned@users.sourceforge.net>

	* 15837: Src/Zle/zle_hist.c: Fixed incremental search in vared
	(without -h) so that it doesn't access the history.

2001-09-16  Bart Schaefer  <schaefer@zsh.org>

	* Akinori MUSHA: 15815: Completion/BSD/Command/_bsd_pkg: More
	detailed completion of package options on different BSD flavors.

2001-09-15  Bart Schaefer  <schaefer@zsh.org>

	* 15812: Doc/Makefile.in, Doc/Zsh/zle.yo: Include mod_tcp.yo in
	MODDOCSRC.  Cross-reference parameters used by ZLE.

2001-09-14  Wayne Davison  <wayned@users.sourceforge.net>

	* 15809: Src/hist.c: With HIST_NO_STORE, don't ignore what looks like
	a history command if we're really going to call a user-defined shell
	function.

2001-09-13  Wayne Davison  <wayned@users.sourceforge.net>

	* 15806: Src/builtin.c, Src/hist.c: Fixed "r" with an empty history
	and the non-storing nature of "r" with HIST_NO_STORE.

2001-09-12  Oliver Kiddle  <opk@zsh.org>

	* 15792: Doc/Zsh/manual.yo, Doc/Zsh/metafaq.yo: update url
	references to http://zsh.sunsite.dk/

2001-09-11  Oliver Kiddle  <opk@zsh.org>

	* 15781: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_samba: new completion for samba tools
